# haskell-holdem

./: .gitignore  README.md  haskell-holdem.cabal
article/: haskell-holdem.lhs
src/HaskellHoldEm/: Card.lhs  Main.lhs
tests/: CabalTest.hs  Suite.hs  Test.hs  TestCard.lhs
